syntax = "proto3";

option go_package = "./pb";

package pb;

// 视频相关功能
message Video {
  int64 id = 1;
  string title = 2;
  int64 section_id = 3;
  string tag_ids = 4;
  int64 owner_id = 5;
  string owner_name = 6;
  string play_url = 7;
  string cover_url = 8;
  int64 comment_count = 9;
  int64 like_count = 10;
  string create_time = 11;
  string update_time = 12;
  string suggestion = 13;
}

message SearchVideoReq {
  string keyword = 1;
  int64 page = 2;
  int64 page_size = 3;
  enum Sort {
    DEFAULT = 0;
    LIKECOUNT = 1;
    COMMENTCOUNT = 2;
  }
  Sort sort = 4;
  int64 highlight = 5;
}

message SearchVideoResp {
  int64 total = 1;
  repeated Video videos = 2;
}

message CompleteVideoReq {
  string input = 1;
}

message CompleteVideoResp {
  repeated string suggestions = 1;
}

// 用户相关功能
message User {
  int64 id = 1;
  string username = 2;
  int64 follower_count = 3;
  int64 follow_count = 4;
  string suggestion = 5;
}

message SearchUserReq {
  string keyword = 1;
  int64 page = 2;
  int64 page_size = 3;
  enum Sort {
    DEFAULT = 0;
    FOLLOWERCOUNT = 1;
  }
  Sort sort = 4;
  int64 highlight = 5;
}

message SearchUserResp {
  int64 total = 1;
  repeated User users = 2;
}

service search {
  // 视频相关功能
  rpc SearchVideo (SearchVideoReq) returns (SearchVideoResp);
  rpc CompleteVideo (CompleteVideoReq) returns (CompleteVideoResp);
  // 用户相关功能
  rpc SearchUser (SearchUserReq) returns (SearchUserResp);
}
